# breadbox

./: CONTRIBUTING.md  Cargo.toml  README.md  bakery.toml  config.example.toml
.forgejo/workflows/: beta-release.yml  dev-release.yml  mirror.yml  package.yml  release.yml
.github/workflows/: release.yml
breadbox/: Cargo.toml
breadbox-shared/: Cargo.toml
breadbox-shared/src/: lib.rs
breadbox-sync/: Cargo.toml
breadbox-sync/src/: main.rs
breadbox/src/: main.rs
packaging/: breadbox-sync.service
packaging/arch/: PKGBUILD
src/: main.rs
