[package]
name = "breadbox"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "breadbox"
path = "src/main.rs"

[dependencies]
# Path dep for local dev; replace with git dep on first tag:
# bread-theme = { git = "https://github.com/Breadway/bread-ecosystem", tag = "theme-v0.1.0", features = ["gtk"] }
bread-theme = { path = "../../bread-ecosystem/bread-theme", features = ["gtk"] }
breadbox-shared = { path = "../breadbox-shared" }
gtk4 = { version = "0.11", features = ["v4_12"] }
gtk4-layer-shell = "0.8"
serde_json = "1"
