[package]
name = "breadbox"
version = "0.2.6"
edition = "2021"
license = "MIT"

[[bin]]
name = "breadbox"
path = "src/main.rs"

[dependencies]
bread-theme = { git = "https://github.com/Breadway/bread-ecosystem", tag = "v0.2.8", features = ["gtk"] }
breadbox-shared = { path = "../breadbox-shared" }
gtk4 = { version = "0.11", features = ["v4_12"] }
gtk4-layer-shell = "0.8"
serde_json = "1"
